2008-11-10  Lluis Sanchez Gual  <lluis@novell.com>

	* mono-addins.pc.in: Respect custom libdir during ./configure. Fixes bug
	#443205. Patch by Diego Pettenò.

2008-11-10  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am: Fix building with parallel make jobs (-j8). Fixes bug
	#443206. Patch by Diego Pettenò.

2008-11-04  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.csproj: Generate a library, not an exe.

2008-10-31  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins/ExtensionNode.cs: Improve error reporting.

2008-09-23  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Description/AddinDescription.cs,
	  Mono.Addins/AddinRegistry.cs: Added methods which allow reading a
	  manifest from a stream.

2008-09-03  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/ExtensionNode.cs: Fix potential race.
	* Mono.Addins.Database/AddinScanResult.cs: Set the changesFound flag
	  when all data needs to be regenerated.

2008-08-22  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.csproj, Mono.Addins.mdp: Use msbuild file format for
	  projects. Removed the old MD1 projects.

2008-08-18  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/AddinSessionService.cs, Mono.Addins/TreeNode.cs,
	  Mono.Addins/Addin.cs, Mono.Addins/ExtensionContext.cs: When the
	  registry is updated in memory, reset cached data from all extension
	  contexts.
	* Mono.Addins.Database/AddinDatabase.cs: Optimized Update method. The
	  call to GetInstalledAddins loads all manifests when the provided
	  AddinType is not All. Avoided using it.

2008-07-16  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Database/AddinScanner.cs: When a new domain needs to be
	  assigned to a folder, try to reuse the startup domain, if it is
	  set.

2008-07-16  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/AddinRegistry.cs,
	  Mono.Addins.Database/AddinScanFolderInfo.cs,
	  Mono.Addins.Database/AddinDatabase.cs,